--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -16,7 +16,7 @@
       {% for page in site.pages %}
         <a href= {{ page.filename }} class="btn">{{ page.title }}</a>
       {% endfor %}
-      <a href="https://github.com/phuston/patrickandfrantonarethebestninjas" class="btn">View on GitHub</a>
+      <a href="https://nicolas-mabie.github.io/Multipage-DERI-website/" class="btn">View on GitHub</a>
       <a href="https://github.com/phuston/patrickandfrantonarethebestninjas/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/phuston/patrickandfrantonarethebestninjas/tarball/master" class="btn">Download .tar.gz</a>
     </section>
